2009-09-21  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Add coding style guidelines for 'using namespace.'
        https://bugs.webkit.org/show_bug.cgi?id=29499

        * coding/coding-style.html:

2009-09-21  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Sam Weinig.

        Add some example files for an upcoming blog post.

        * blog-files/load-unload-example.html: Added.
        * blog-files/pageshow-pagehide-example.html: Added.

2009-09-17  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        Update contributing.html to mention recently added tools.
        https://bugs.webkit.org/show_bug.cgi?id=29318

        Update our contributing instructions to mention
        the new tools (check-webkit-style and commit-queue)
        recently added to make contributions easier.

        * coding/contributing.html:
         - Mention check-webkit-style as an optional helper tool.
         - Mention checking the 'patch' checkbox.
         - Mention the commit-queue as an optional helper tool.
         - Remove "or in email" since patch reviews are all done via bugzilla.
         - Encourage contributers to be responsible for getting their patch landed.  Provide a list of committers.
         - Mention commit-queue as an optional help in getting your patch landed.
         - Give an overview of the commit-queue process and link to the Commit Queue docs.

2009-09-09  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Mark Rowe.

        Add instructions to bug reporting guidlines on how and when
        to apply port-specific keywords.

        * quality/bugwriting.html:

2009-09-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Adele Peterson.

        Update Security Group Members list.

        * security/security-group-members.html:

2009-09-06  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Eric Seidel.

        Drop <definition-src> support