@@ -1,23 +1,24 @@
 <?php
-	$title = "MathML";
-	include("../../header.inc");
+    $title = "MathML";
+    include("../../header.inc");
 ?>
 
 <h2>MathML</h2>
 
 <h3>Overview</h3>
-<p>Welcome to the project page for MathML.  MathML is a specification from the W3C for the inclusion of mathematical expressions in Web documents.
-At this time WebKit has no MathML implementation, but we are very interested in the development of a fully integrated MathML implementation.
-Like SVG, we would llike MathML to be a first-class citizen in WebKit, using our DOM, CSS and JavaScript engines.
+<p>Welcome to the project page for MathML.  <a href="http://www.w3.org/TR/MathML2/">MathML</a> is a specification from the W3C for the inclusion of mathematical expressions in Web documents.
+At this time, work is underway to implement MathML in WebKit.
+Like SVG, we would like MathML to be a first-class citizen in WebKit, using our DOM, CSS and JavaScript engines.
 </p>
 <p>Just as with SVG, we would like to work on making improvements to our DOM and reconciling with the KDOM work that has been done for KSVG2 so that
 SVG and MathML can share some of the same compound document infrastructure (and also to ensure that a MathML implementation can be shared between KDE
 and OS X).
 </p>
+<p>More information about this project is provided on the <a href="https://trac.webkit.org/wiki/MathML">MathML Wiki page</a>.</p>
 
 <h3>Get Involved!</h3>
-<p>This project is still in the planning stages.  <a href="../../contact.html">Come find us</a> on <tt>#ksvg</tt> and <tt>#webkit</tt> to get involved.</p>
+<p><a href="../../contact.html">Come find us</a> on <tt>#webkit</tt> to get involved.</p>
 
 <?php
-	include("../../footer.inc");
+    include("../../footer.inc");
 ?>
